<resources>
    <string name="app_name">Animation_assignment 4</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!-- Strings related to login -->
    <string name="nameHint">Enter Name</string>
    <string name="usernameHint">Enter User Name</string>
    <string name="passwordHint">Enter Password</string>
    <string name="passwordHintAgain">Enter Password Again</string>

    <string name="rmbUsername">Remember User Name</string>
    <string name="rmbPassword">Remember Password</string>
    <string name="rmbOptions">Remember Options</string>

    <string name="no_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="connection_lost">Connection lost. Reconnecting...</string>
    <string name="reconnected">Reconnected!</string>

    <string name="title_activity_login">Sign Up New Account</string>
    <string name="title_activity_game">Play Game</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_loading">Loading\nConnecting to Buddy.com</string>
    <string name="send">Send</string>
    <string name="username">Username</string>

    <string-array name="role_array">
        <item>Parent</item>
        <item>Kid</item>
    </string-array>
    <string name="title_activity_child_report">Child Report</string>
</resources>
